--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -30,3 +30,13 @@
 .Home .notes p {
   color: #666;
 }
+
+.body-calendar {
+  padding-top: 15px;
+  margin-top: 45px;
+  padding-bottom: 15px;
+  margin-bottom: 45px;
+  background-color: #ffb225;
+  border-radius: 5px;
+  height: 80vh
+}
