--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -36,7 +36,11 @@
   margin-top: 45px;
   padding-bottom: 15px;
   margin-bottom: 45px;
-  background-color: #ffb225;
+  background-color: #ffb225e6;
   border-radius: 5px;
   height: 80vh
+}
+
+.body-calendar Row {
+  height: 100%;
 }
