--- a/src/containers/BridgesCalendar.css
+++ b/src/containers/BridgesCalendar.css
@@ -16,9 +16,14 @@
     padding: 0;
     list-style-image: none;
   }
+  div.calendar .calendar-header {
+    text-align: center;
+    padding: 0;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    background-color: rgb(255, 135, 32);
+  }
   div.calendar li {
-    height: auto;
-    width: 100%;
     padding: 10px;
     max-height: 80px;
     border: 1px solid #fff;
