--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .btn-primary {
-  background-color: rgb(255, 135, 32) !important;
+  background-color: #ffa000 !important;
   border-color: white !important;
   color: white !important;
 }
