--- a/src/containers/BridgesCalendar.css
+++ b/src/containers/BridgesCalendar.css
@@ -21,7 +21,8 @@
     padding: 0;
     border: 1px solid #fff;
     border-radius: 3px;
-    background-color: rgb(255, 135, 32);
+    background-color: #ffa000;
+    color: #fffde7
   }
   div.calendar li {
     padding: 10px;
@@ -53,7 +54,7 @@
     }
     div.calendar .weekdays li,
     div.calendar .footer-weekdays li {
-      background-color: rgb(255, 135, 32);
+      background-color: ffa000;
       height: 40px;
       text-align: center;
       color: black;
