facebook login implemented

--- a/src/containers/Login.css
+++ b/src/containers/Login.css
@@ -12,7 +12,7 @@
 .login-modal {
   height: 55%;
   /* max-width: 70% !important;*/
-  width: 30% !important; 
+  width: 400px !important; 
   display: inline-block;
   text-align: left;
   vertical-align: middle;
