--- a/src/components/BridgeCard.css
+++ b/src/components/BridgeCard.css
@@ -1,4 +1,6 @@
 .top-badge {
+    height: 25px;
+    width: 70px;
     display: flex; 
     border: 3px solid;
     border-color: #ffa000 !important;
