--- a/src/components/BridgeCard.css
+++ b/src/components/BridgeCard.css
@@ -3,7 +3,7 @@
     width: 70px;
     display: flex; 
     border: 3px solid;
-    border-color: #ffa000 !important;
+    border-color: #f87825 !important;
     background-color: #fbf8ed;
     border-radius: 7px;
     align-items: center;
