flights implemented and holidays list on bottom of the page

--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -38,7 +38,8 @@
   margin-bottom: 45px; */
   padding: 0px;
   border-radius: 5px;
-  height: 90%;
+  height: 95%;
+  margin-top: auto;
   max-width: 80% !important;
 }
 
