IG card are clickable

--- a/src/containers/HolidaysList.css
+++ b/src/containers/HolidaysList.css
@@ -1,6 +1,12 @@
 .holidays-container {
     max-width: 80% !important;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 100%;
     display: flex;
 }
+
+.grow { 
+    transition: all .2s ease-in-out;
+    cursor: pointer;
+}
+.grow:hover { transform: scale(1.2); }
