--- a/src/containers/Landing.css
+++ b/src/containers/Landing.css
@@ -1,9 +1,9 @@
 .landing-form {
-    width: 22%;
+    width: 25%;
     position: relative;
-    top: 28%;
-    left: 12%;
-    height: 44vh;
+    top: 37%;
+    left: 10%;
+    height: 50%;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px, rgba(0, 0, 0, 0.19) 0px 3px 10px 0px;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
@@ -34,4 +34,39 @@
   }
 .landing.css-2b097c-container {
     width: 100%
+}
+.landing-container {
+    height: 100vh
+}
+.landing-container img {
+    position: relative;
+    top: 2%;
+    height: 40px;
+    left: 2%;
+    width: auto;
+}
+.landing-container button.login{
+    position: absolute;
+    right: 2%;
+    top: 2%;
+    background-color: transparent !important;
+    border: none;
+}
+.landing-container button.signup{
+    position: absolute;
+    right: 4%;
+    top: 2%;
+    background-color: transparent !important;
+    border: none;
+}
+.landing-container h2 {
+    position: absolute;
+    top: 16%;
+    right: 18%;
+    width: 20%;
+    font-size: 3.5rem;
+    color: white !important;
+}
+.landing-container label {
+    font-size: 2rem;
 }
