--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -1,140 +1,176 @@
 .btnCircle.btnXl {
-    width: 70px;
-    height: 70px;
-    padding: 10px 16px;
-    border-radius: 35px;
-    font-size: 24px;
-    line-height: 1.33;
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  border-radius: 35px;
+  font-size: 24px;
+  line-height: 1.33;
 }
 
 .btnCircle {
-    width: 30px;
-    height: 30px;
-    padding: 6px 0px;
-    border-radius: 15px;
-    text-align: center;
-    font-size: 12px;
-    line-height: 1.42857;
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
 }
 
 .react-autosuggest__input {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .react-autosuggest__container {
-    width: 85%;
-    height: 65%
+  width: 85%;
+  height: 65%
 }
 
 .css-2b097c-container {
-    width: 90%;
-    height: 65%;
+  width: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 65%;
 }
 
 .css-yk16xz-control {
-    height: 100%;
+  height: 100%;
 }
+
 .css-1hwfws3 {
-    height: 100%
+  height: 100%
 }
+
 .css-1hb7zxy-IndicatorsContainer {
-    height: 100%
+  height: 100%
 }
 
 .geosuggest {
-    font-size: 18px;
-    font-size: 1rem;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    /* margin: 1em auto; */
-    text-align: left;
-  }
-  .geosuggest__input-wrapper {
-    width: 85%;
-    height: 65%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .geosuggest__input {
-    width: 100%;
-    height: 100%;
-    font-size: 1.3rem;
-    align-items: center;
-    background-color: hsl(0,0%,100%);
-    border-color: hsl(0,0%,80%);
-    border-radius: 4px;
-    border-style: solid;
-    border-width: 1px;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    min-height: 38px;
-    outline: 0 !important;
-    position: relative;
-    box-sizing: border-box;
-    padding: .5em 1em;
-    -webkit-transition: border 0.2s, box-shadow 0.2s;
-            transition: border 0.2s, box-shadow 0.2s;
-  }
-  .geosuggest__input:focus {
-    border-color: #267dc0;
-    box-shadow: 0 0 0 transparent;
-  }
-  .geosuggest__suggests {
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    max-height: 25em;
-    padding: 0;
-    margin-top: -1px;
-    background: #fff;
-    border: 2px solid #267dc0;
-    border-top-width: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    list-style: none;
-    z-index: 5;
-    -webkit-transition: max-height 0.2s, border 0.2s;
-            transition: max-height 0.2s, border 0.2s;
-  }
-  .geosuggest__suggests--hidden {
-    max-height: 0;
-    overflow: hidden;
-    border-width: 0;
-  }
-  
-  /**
+  font-size: 18px;
+  font-size: 1rem;
+  position: relative;
+  width: 100%;
+  margin: 1em auto;
+  text-align: left;
+}
+
+.geosuggest__input-wrapper {
+  /* width: 85%; */
+  height: 65%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.geosuggest__input {
+  width: 100%;
+  height: 100%;
+  font-size: 1.3rem;
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  min-height: 38px;
+  outline: 0 !important;
+  position: relative;
+  box-sizing: border-box;
+  padding: .5em 1em;
+  -webkit-transition: border 0.2s, box-shadow 0.2s;
+  transition: border 0.2s, box-shadow 0.2s;
+}
+
+.geosuggest__input:focus {
+  border-color: #267dc0;
+  box-shadow: 0 0 0 transparent;
+}
+
+.geosuggest__suggests {
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  max-height: 25em;
+  padding: 0;
+  margin-top: -1px;
+  background: #fff;
+  border: 2px solid #267dc0;
+  border-top-width: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  list-style: none;
+  z-index: 5;
+  -webkit-transition: max-height 0.2s, border 0.2s;
+  transition: max-height 0.2s, border 0.2s;
+}
+
+.geosuggest__suggests--hidden {
+  max-height: 0;
+  overflow: hidden;
+  border-width: 0;
+}
+
+/**
    * A geosuggest item
    */
-  .geosuggest__item {
-    font-size: 18px;
-    font-size: 1.2rem;
-    padding: .5em .65em;
-    cursor: pointer;
+
+.geosuggest__item {
+  font-size: 18px;
+  font-size: 1.2rem;
+  padding: .5em .65em;
+  cursor: pointer;
+}
+
+.geosuggest__item:hover, .geosuggest__item:focus {
+  background: #f5f5f5;
+}
+
+.geosuggest__item--active {
+  background: #267dc0;
+  color: #fff;
+}
+
+.geosuggest__item--active:hover, .geosuggest__item--active:focus {
+  background: #ccc;
+}
+
+.geosuggest__item__matched-text {
+  font-weight: bold;
+}
+
+@media (max-width: 767px) {
+  .col-12 {
+    margin-top: 5%;
   }
-  .geosuggest__item:hover,
-  .geosuggest__item:focus {
-    background: #f5f5f5;
+  .col-6 {
+    height: 100% !important;
   }
-  .geosuggest__item--active {
-    background: #267dc0;
-    color: #fff;
+  .navigation-bar-col {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px, rgba(0, 0, 0, 0.19) 0px 3px 10px 0px;
+    border-radius: 7px;
   }
-  .geosuggest__item--active:hover,
-  .geosuggest__item--active:focus {
-    background: #ccc;
+  .navigation-bar.row {
+    box-shadow: none !important;
   }
-  .geosuggest__item__matched-text {
-    font-weight: bold;
-  }
+}
+
+.navigation-bar-col.left {
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+}
+.navigation-bar-col.right {
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+}
