--- a/src/containers/Landing.css
+++ b/src/containers/Landing.css
@@ -11,54 +11,58 @@
     flex-direction: column;
     justify-content: space-evenly; */
 }
-.landing-form Form{
+
+.landing-form Form {
     height: 90%;
     padding: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
+
 .landing-form Button {
     width: 30%;
     margin-left: auto;
     margin-right: auto;
 }
+
 .landing.geosuggest__suggests {
     width: 100% !important;
 }
+
 .landing .geosuggest__input-wrapper {
     width: 100%;
     height: 65%;
     margin-left: auto;
     margin-right: auto;
-  }
+}
+
 .landing.css-2b097c-container {
     width: 100%
 }
+
 .landing-container {
     height: 100vh
 }
+
 .landing-container img {
-    position: relative;
-    top: 2%;
     height: 40px;
-    left: 2%;
     width: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
-.landing-container button.login{
-    position: absolute;
-    right: 2%;
-    top: 2%;
+
+.landing-container button.login {
     background-color: transparent !important;
     border: none;
 }
-.landing-container button.signup{
-    position: absolute;
-    right: 4%;
-    top: 2%;
+
+.landing-container button.signup {
     background-color: transparent !important;
     border: none;
+    margin-right: 0 !important;
 }
+
 .landing-container h2 {
     position: absolute;
     top: 16%;
@@ -67,6 +71,20 @@
     font-size: 3.5rem;
     color: white !important;
 }
+
 .landing-container label {
     font-size: 2rem;
+}
+
+@media (max-width: 767px) {
+    .landing-form {
+        margin-top: 5%;
+        margin-right: auto;
+        width: 90%;
+        left: auto;
+        margin-left: auto;
+        position: relative;
+        top: auto;
+        height: 60%;
+    }
 }
