--- a/src/containers/Landing.css
+++ b/src/containers/Landing.css
@@ -20,12 +20,6 @@
     justify-content: space-around;
 }
 
-.landing-form Button {
-    width: 30%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .landing.geosuggest__suggests {
     width: 100% !important;
 }
@@ -88,4 +82,14 @@
     #landingInfo {
         display: none;
     }
+}
+
+.download-btn {
+    border-color: #b9b7b7 !important;
+    background-color: white !important;
+    color: black !important;
+}
+
+button {
+    font-weight: bold !important;
 }
