--- a/src/containers/Info.css
+++ b/src/containers/Info.css
@@ -1,4 +1,6 @@
 .info-header {
+    position: absolute;
+    width: 100%;
     height: 6vh;
     background-color: #fff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .06);
@@ -25,7 +27,11 @@
     height: auto;
     margin: auto auto auto 0;
 }
-
+.info-mac {
+    width: 1035px;
+    margin: auto;
+    margin-top: 2%
+}
 .info-container h1 {
     width: 414px;
     height: 116px;
@@ -33,7 +39,6 @@
     font-weight: 500 !important;
     font-size: 124px !important;
     line-height: 74px !important;
-    /* or 60% */
     letter-spacing: -0.01em;
     color: #FB552C;
     margin-left: auto;
@@ -50,6 +55,34 @@
     letter-spacing: -1px;
     color: #3D3D3D;
     margin-left: auto;
+    margin-right: auto;
+}
+
+.info-container h3 {
+    width: 545px;
+    height: 116px;
+    font-style: normal;
+    font-size: 48px !important;
+    line-height: 57px !important;
+    font-weight: bold !important;
+    text-align: right;
+    letter-spacing: -0.01em;
+    color: #FB552C;
+    margin-left: auto;
+    margin-right: 1%;
+}
+
+.info-container h4 {
+    width: 545px;
+    height: 111px;
+    font-style: normal;
+    font-weight: normal !important;
+    font-size: 22px !important;
+    line-height: 26px !important;
+    text-align: left;
+    letter-spacing: -1px;
+    color: #3D3D3D;
+    margin-left: 1%;
     margin-right: auto;
 }
 
